--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,21 @@ h1 {
     font-family: Helvetica;
     border: 0px;
 }
+h2 {
+    color:black;
+    font-family: Helvetica;
+    border: 0px;
+    text-align: center;
+}
 h3 {
     color:darkslateblue;
     font-family: Helvetica;
     border: 0px;
-}
+    }
 h4 {
-    color:darkslateblue;
+    color: white;
+    outline: black;
     font-family: Helvetica;
-    border: 0px;
-    text-align: right;
 }
 #log_in {
     border: 1px solid black;
@@ -20,6 +25,11 @@ h4 {
     padding: 10px;
 }
 p {
-    color: black;
-    font-family: Helvetica;
+    color: darkslateblue;
+    font-family: 'Courier New', Courier, monospace;
+}
+.dietary {
+    background-color: lightsalmon;
+    color: white;
+    padding: 10px;
 }
